--- a/style.css
+++ b/style.css
@@ -1,3 +1,6 @@
+@import url("https://fonts.googleapis.com/css2?family=Megrim&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Work+Sans:ital,wght@0,300;0,400;0,600;0,700;1,400&display=swap");
+
 :root {
     --primary-color: #DC2626;
     --off-white: #F3F4F6;
@@ -6,6 +9,8 @@
 }
 
 body {
+    font-family: "Work Sans", sans-serif;
+    text-align: center;
     background-image: url("image.jpg");
     background-size: 100%;
     padding-left: 2rem;
@@ -22,7 +27,7 @@ button {
 
 form div p {
     color: var(--primary-green);
-    font-size: x-large;
+    font-size: large;
 }
 
 .input-label {
@@ -70,8 +75,18 @@ form div p {
     border-bottom-right-radius: 4rem;
 }
 
+.navigation header h1 {
+    font-family: "Megrim", cursive;
+    text-align: initial;
+    font-size: xx-large;
+}
+
 .navigation .nav-pills {
     text-align: right;
+}
+
+.navigation .link {
+    color: #2c3f16;
 }
 
 .navigation .link:hover {
