--- a/style.css
+++ b/style.css
@@ -73,12 +73,18 @@ form div p {
     padding: 1rem;
     border-top-left-radius: 4rem;
     border-bottom-right-radius: 4rem;
+    margin-left: -45px;
+    margin-right: -45px;
 }
 
 .navigation header h1 {
     font-family: "Megrim", cursive;
     text-align: initial;
     font-size: xx-large;
+}
+
+.navigation header h1:hover {
+    color: #0d5c45;
 }
 
 .navigation .nav-pills {
@@ -116,6 +122,8 @@ form div p {
     color: white;
     border-top-left-radius: 4rem;
     border-bottom-right-radius: 4rem;
+    margin-left: -45px;
+    margin-right: -45px;
 }
 
 .footer .link {
