--- a/style.css
+++ b/style.css
@@ -36,7 +36,7 @@ form div p {
     width: 256px;
 }
 
-.input-text {
+#input-text {
     font-size: 15px;
     padding: 0.6rem 1rem;
     border: 2px solid var(--primary-green);
@@ -70,7 +70,6 @@ form div p {
 .navigation {
     background-color: var(--primary-color);
     color: white;
-    padding: 1rem;
     border-top-left-radius: 4rem;
     border-bottom-right-radius: 4rem;
     margin-left: -45px;
